k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-rating
  labels:
    name: customer-rating
    app: customer-rating-system
